# carwash_n_spa_restful

./: .env  Cargo.toml  README.md
apis/: carpet cleaning type cost data.md  carpet type colour data.md  carpet type size data.md  employees data.md  sales commission data.md  sales data.md  vehicle cleaning type cost data.md  vehicle make data.md  vehicle model data.md
sql/: 0_create_database.sql
src/: main.rs  models.rs  persistence.rs  routes.rs
